--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,20 @@
-/* your code */
+
+.table-container{
+	width: 90%;
+	margin-left: 5%;
+	border: 2px solid gray;
+	border-radius: 5px;
+	border-spacing: 0px;
+}
+thead tr th{
+	color: white;
+	text-align: left;
+	background-color: blue;
+	padding: 5px;
+}
+tbody tr td{
+	padding: 10px;
+}
+tbody tr:nth-child(even){
+	background-color: grey;
+}
